--- a/BSS v2/MainWindow.xaml
+++ b/BSS v2/MainWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:BSS_v2"
         mc:Ignorable="d"
         Title="Blad-Steen-Schaar" Height="488.96" Width="800" Closing="Window_Closing">
-    <Grid>
-        <Menu HorizontalAlignment="Left" Height="19" Margin="1,0,0,0" VerticalAlignment="Top" Width="791">
+    <DockPanel>
+        <Menu DockPanel.Dock="Top" HorizontalAlignment="Stretch" Height="19" Margin="1,0,0,0" VerticalAlignment="Top">
             <MenuItem Header="Bestand">
                 <MenuItem x:Name="MnuSluiten" Header="Sluiten" Click="MnuSluiten_Click"/>
             </MenuItem>
@@ -15,19 +15,24 @@
                 <MenuItem x:Name="MnuRegels" Header="Regels" Click="MnuRegels_Click"/>
             </MenuItem>
         </Menu>
+        <StatusBar DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Height="44" VerticalAlignment="Top">
+            <Label x:Name="LblReady" Content="Ready" Margin="5,0,0,0" FontStyle="Italic"/>
+            <Image Source="img/logo.png" Margin="5,0,0,0"/>
+            <Label x:Name="LblSpelerNaam" Content="" Margin="5,0,0,0" FontStyle="Italic"/>
+            <Label x:Name="LblToonTijd" Content="" Margin="400,0,0,0"/>
+        </StatusBar>
+        
+    <Grid>
+        
         <Button x:Name="BtnSteen" Content="Steen" HorizontalAlignment="Left" Margin="26,135,0,0" VerticalAlignment="Top" Width="75" Click="BtnSteen_Click"/>
         <Button x:Name="BtnBlad" Content="Blad" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="26,59,0,0" Click="BtnBlad_Click"/>
         <Button x:Name="BtnSchaar" Content="Schaar" HorizontalAlignment="Left" Margin="26,204,0,0" VerticalAlignment="Top" Width="75" Click="BtnSchaar_Click"/>
         <Canvas x:Name="CanAfbeelding" HorizontalAlignment="Left" Height="272" Margin="229,35,0,0" VerticalAlignment="Top" Width="550"/>
         <Label x:Name="LblSpelerScore" Content="" HorizontalAlignment="Left" Margin="308,312,0,0" VerticalAlignment="Top" Height="72" Width="88" FontSize="48" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         <Label x:Name="LblComputerScore" Content="" HorizontalAlignment="Left" Margin="590,307,0,0" VerticalAlignment="Top" Height="72" Width="88" FontSize="48" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <StatusBar HorizontalAlignment="Left" Height="44" Margin="0,406,0,0" VerticalAlignment="Top" Width="792">
-            <Label x:Name="LblReady" Content="Ready" Margin="5,0,0,0" FontStyle="Italic"/>
-            <Image Source="img/logo.png" Margin="5,0,0,0"/>
-            <Label x:Name="LblSpelerNaam" Content="" Margin="5,0,0,0" FontStyle="Italic"/>
-            <Label x:Name="LblToonTijd" Content="" Margin="400,0,0,0"/>
-        </StatusBar>
+        
         <Label x:Name="LblResterendeSeconden" Content="" HorizontalAlignment="Left" Margin="26,307,0,0" VerticalAlignment="Top" FontSize="20"/>
 
     </Grid>
+    </DockPanel>
 </Window>
